# Smart-Identity-Wallet

./: .gitignore  README.MD  README.md
ai_service/: chat_bot.py  main.py  ocr_identitycard.py  requirements.txt
ai_service/test/: ocr_opencv.py  ocr_test.py
client/: app.py  main.py  server_connect.py
client/backend/: ai_data_requester.py  data_requester.py  server_connect.py
client/frontend/: app.py  test.py
client/frontend/screens/: diverse_docs_screen.py  document_screen_base.py  home.py  login_screen.py  ocr_processing_screen.py  personal_docs_screen.py  photo_success_screen.py  register_screen.py  splash_screen.py  ui_components.py  vehicul_docs_screen.py
client/frontend/screens/cards_screen/: idenity_card.py
client/frontend/screens/chat_screens/: chat_screen.py
client/server_requests/: ai_data_requester.py  auth_requester.py  data_requester.py  server_connect.py
server/: Cargo.toml
server/src/: main.rs
server/src/ai_microservice/: ai_requests.rs
server/src/data_manager/: database_manager.rs  mod.rs  password_hashing.rs
server/src/handle_message/: request_handler.rs
server/src/handle_requests/: auth_requests.rs  data_requests.rs  mod.rs  request_handler.rs
server/src/handle_requests/personal_data_requests/: identity_card.rs  mod.rs  personal_data_manager.rs  wallet_data.rs
server/src/network/: auth.rs  common.rs  handle_message.rs  middleware.rs  mod.rs  protocol_handler.rs  server_configure.rs  server_https.rs
server/src/others/: common.rs
test_client/: Cargo.toml
test_client/src/: main.rs
(+21 files in other folders)
