[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-postgres = { version = "0.7.15" }
#.env
dotenv = "0.15"
#hasing
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }